Use BC Base64 instead of JAXB which is probably not available